# benchmark

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  eigen.hpp  fusion checks.cpp  fusion_checks.cpp  futhark_lib.h  naive.hpp  out.txt  utility.cpp  utility.h  vectorization.txt  vectorized.hpp
GPU/: config.h
GPU/cuBLAS/: baseline.cu  cuBLAS_test
GPU/eigen/: 1d.h  1d.hpp  CMakeLists.txt  baseline.cpp  baseline.h  baseline.hpp  eigen_test.cpp  test.cpp  util.h
GPU/futhark/: 1d.fut  2d  2d.fut  3d  CMakeLists.txt  baseline.c  baseline.fut  baseline.hpp  futhark_test.cpp  futhark_test.fut  futhark_test.h  futhark_test.hpp  run.sh
GPU/membench/: build.sh  c.out  clMem  clMem.cpp  cuMem  cuMem.cu  m.out  tfMem.py
GPU/plain_cuda/: add_cuda
GPU/plain_opencl/: ocltest
GPU/tensorflow/: baseline.py  dim1.py  dim2.py  tensorflow_test.py  test.py  time.py  timeline.json  timeline_01.json  util.py
app/: CMakeLists.txt
app/array_sum/: CMakeLists.txt  array_sum.cpp  bench.s
app/dot_prod/: CMakeLists.txt  bench.s  dot_prod.cpp
app/mat_mul/: CMakeLists.txt  mat_mul.cpp  mat_mul.hpp  test.cpp
app/mat_sum/: CMakeLists.txt  bench.s  mat_sum.cpp
app/read/: CMakeLists.txt  bench.s  read.cpp
app/stride_sum/: CMakeLists.txt  stride_sum.cpp
include/: data.h  sizes.h  util.h
plot/: config.json  generate_sizes.py  overnight.sh  plot.py  precise_sizes.txt  sizes.txt
plot/mat_sum/: 60k_linear_1var.txt
questions/: generate.sh  questions.md
src/: CMakeLists.txt  util.cpp
tensor_contraction/CPU/: CMakeLists.txt  fusion_checks.cpp  futhark.hpp  futhark_lib.cpp  futhark_lib.fut  log.txt  naive.hpp  utility.cpp  vectorized.hpp
tensor_contraction/GPU/: CMakeLists.txt  config.cpp  config.h  gpu_benchmark.cpp
tensor_contraction/GPU/cuBLAS/: 1d.cu  2d.cu  build.sh  cuBLAS_test.cu  profiler.py  util.h
tensor_contraction/GPU/eigen/: 1d.cpp  2d.cpp  2d.h  2d.hpp  baseline.cpp  eigen_test.h
tensor_contraction/GPU/futhark/: 1d  1d.c  1d.fut  2d.c  3d.c  3d.fut  baseline  baseline.fut  futhark_test.c  run.sh  util.h
tensor_contraction/GPU/membench/: build.sh  clMem.cpp  cuMem  cuMem.cu  tfMem.py
tensor_contraction/GPU/plain_cuda/: add.cu
tensor_contraction/GPU/plain_opencl/: ocltest.cpp
tensor_contraction/GPU/tensorflow/: tensordot.json  timeline.json  xla.py
