add_compile_options(-mfma)
add_executable (mat_mul mat_mul.cpp mat_mul.hpp)
benchmark_setup(mat_mul)
target_include_directories(mat_mul PRIVATE ${PROJECT_SOURCE_DIR}/extern/eigen)

add_executable (mat_mul_test test.cpp mat_mul.hpp)
target_include_directories(mat_mul_test PRIVATE ${PROJECT_SOURCE_DIR}/extern/eigen)
add_test(mat_mul_1 mat_mul_test 0)
add_test(mat_mul_2<2,2> mat_mul_test 1)
add_test(mat_mul_2<2,4> mat_mul_test 2)
add_test(mat_mul_2<4,2> mat_mul_test 3)
add_test(mat_mul_2<4,4> mat_mul_test 4)
add_test(mat_mul_2<2,8> mat_mul_test 5)
add_test(eigen_map mat_mul_test 6)
add_test(mat_mul_2<36,36,36,4,4> mat_mul_test 7)
